--- a/src/main/resources/fxml/View.fxml
+++ b/src/main/resources/fxml/View.fxml
@@ -1,11 +1,80 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.SeparatorMenuItem?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.input.KeyCodeCombination?>
+<?import javafx.scene.layout.BorderPane?>
 
-<VBox xmlns:fx="http://javafx.com/fxml/1">
-
-</VBox>
-	<!-- 
-	ESTE FXML EXTIENDE DE VBox SEGÚN SE NECESITE QUE EL ELEMENTO 
-	SEA DIFERENTE SE PUEDE BORRAR Y CREAR OTRO INDICANDO DE QUE NUEVO ELEMENTO EXTIENDE 
-	-->
+<BorderPane  fx:id="view" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.0" xmlns:fx="http://javafx.com/fxml/1">
+   <top>
+      <MenuBar BorderPane.alignment="CENTER">
+        <menus>
+          <Menu mnemonicParsing="false" text="_Archivo">
+            <items>
+              <MenuItem onAction="#onNuevoAction" text="_Nuevo">
+                     <graphic>
+                        <ImageView pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../images/nuevo.gif" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                     <accelerator>
+                        <KeyCodeCombination alt="UP" code="N" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
+                     </accelerator></MenuItem>
+                  <MenuItem onAction="#onAbrirAction" text="_Abrir...">
+                     <graphic>
+                        <ImageView pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../images/abrir.gif" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                     <accelerator>
+                        <KeyCodeCombination alt="UP" code="A" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
+                     </accelerator></MenuItem>
+                  <MenuItem onAction="#onGuardarAction" text="_Guardar">
+                     <graphic>
+                        <ImageView pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../images/guardar.gif" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                     <accelerator>
+                        <KeyCodeCombination alt="UP" code="G" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
+                     </accelerator></MenuItem>
+                  <MenuItem onAction="#onGuardarComoAction" text="_Guardar_Como..." />
+                  <SeparatorMenuItem mnemonicParsing="false" />
+              	  <MenuItem onAction="#onSalirAction" text="_Salir">
+                     <accelerator>
+                        <KeyCodeCombination alt="UP" code="S" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
+                     </accelerator></MenuItem>
+            </items>
+          </Menu>
+          <Menu mnemonicParsing="false" text="_Ayuda">
+            <items>
+              <MenuItem mnemonicParsing="false" onAction="#onAcercaDeAction" text="Acerca de..." />
+            </items>
+          </Menu>
+        </menus>
+      </MenuBar>
+   </top>
+   <center>
+      <TabPane prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
+        <tabs>
+          <Tab fx:id="personalTab" text="Personal" />
+          <Tab fx:id="contactoTab" text="Contacto" />
+            <Tab fx:id="formacionTab" text="Formación" />
+            <Tab fx:id="experienciaTab" text="Experiencia" />
+            <Tab fx:id="conocimientosTab" text="Conocimientos" />
+        </tabs>
+      </TabPane>
+   </center>
+</BorderPane>
