--- a/src/main/resources/fxml/PersonalView.fxml
+++ b/src/main/resources/fxml/PersonalView.fxml
@@ -52,7 +52,10 @@
       <TextField fx:id="codigoPostalTF" maxWidth="100.0" prefHeight="25.0" prefWidth="110.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
       <TextField fx:id="localidadTF" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="6" />
       <ComboBox fx:id="paisCB" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="7" />
-      <ListView fx:id="nacionalidadesLV" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+      <ListView fx:id="nacionalidadesLV" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="8">
+         <GridPane.margin>
+            <Insets bottom="10.0" />
+         </GridPane.margin></ListView>
       <VBox prefHeight="200.0" prefWidth="100.0" spacing="5.0" GridPane.columnIndex="2" GridPane.rowIndex="8">
          <children>
             <Button fx:id="nuevaNacionalidadB" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#onNuevaNacionalidadBAction" text="+">
@@ -69,6 +72,6 @@
       </VBox>
    </children>
    <padding>
-      <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
    </padding>
 </GridPane>
