--- a/src/main/resources/fxml/FormacionView.fxml
+++ b/src/main/resources/fxml/FormacionView.fxml
@@ -9,12 +9,12 @@
 
 <HBox fx:id="view" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.0" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <TableView fx:id="table" prefHeight="400.0" prefWidth="513.0" HBox.hgrow="ALWAYS">
+      <TableView fx:id="table" editable="true" prefHeight="400.0" prefWidth="513.0" HBox.hgrow="ALWAYS">
         <columns>
-          <TableColumn fx:id="desdeCol" prefWidth="94.0" text="Desde" />
-          <TableColumn fx:id="hastaCol" prefWidth="56.0" text="Hasta" />
-            <TableColumn fx:id="denominacionCol" prefWidth="107.0" text="Denominación" />
-            <TableColumn fx:id="organizadorCol" prefWidth="97.0" text="Organizador" />
+          <TableColumn fx:id="desdeCol" prefWidth="120.0" text="Desde" />
+          <TableColumn fx:id="hastaCol" prefWidth="120.0" text="Hasta" />
+            <TableColumn fx:id="denominacionCol" prefWidth="200.0" text="Denominación" />
+            <TableColumn fx:id="organizadorCol" prefWidth="200.0" text="Organizador" />
         </columns>
       </TableView>
       <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="5.0" HBox.hgrow="NEVER">
