--- a/src/main/resources/fxml/ConocimientosView.fxml
+++ b/src/main/resources/fxml/ConocimientosView.fxml
@@ -9,10 +9,10 @@
 
 <HBox fx:id="view" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.0" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <TableView fx:id="table" prefHeight="400.0" prefWidth="513.0" HBox.hgrow="ALWAYS">
+      <TableView fx:id="table" editable="true" prefHeight="400.0" prefWidth="513.0" HBox.hgrow="ALWAYS">
         <columns>
-          <TableColumn fx:id="denominacionCol" prefWidth="94.0" text="Denominación" />
-          <TableColumn fx:id="nivelCol" prefWidth="56.0" text="Nivel" />
+          <TableColumn fx:id="denominacionCol" prefWidth="200.0" text="Denominación" />
+          <TableColumn fx:id="nivelCol" prefWidth="200.0" text="Nivel" />
         </columns>
       </TableView>
       <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="5.0" HBox.hgrow="NEVER">
