--- a/src/main/resources/fxml/ContactoView.fxml
+++ b/src/main/resources/fxml/ContactoView.fxml
@@ -27,7 +27,7 @@
                   <VBox prefHeight="50.0">
                      <children>
                         <Button maxHeight="60.0" minWidth="60.0" mnemonicParsing="false" onAction="#onAñadirTelefono" text="Añadir" />
-                        <Button maxWidth="60.0" minWidth="60.0" mnemonicParsing="false" onAction="#onEliminarTelefono" text="Eliminar" />
+                        <Button fx:id="eliminarTelefonoB" maxWidth="60.0" minWidth="60.0" mnemonicParsing="false" onAction="#onEliminarTelefono" text="Eliminar" />
                      </children>
                      <HBox.margin>
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -52,7 +52,7 @@
                   <VBox prefHeight="50.0">
                      <children>
                         <Button maxHeight="60.0" minWidth="60.0" mnemonicParsing="false" onAction="#onAñadirCorreo" text="Añadir" />
-                        <Button maxWidth="60.0" minWidth="60.0" mnemonicParsing="false" onAction="#onEliminarCorreo" text="Eliminar" />
+                        <Button fx:id="eliminarCorreoB" maxWidth="60.0" minWidth="60.0" mnemonicParsing="false" onAction="#onEliminarCorreo" text="Eliminar" />
                      </children>
                      <HBox.margin>
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -77,7 +77,7 @@
                   <VBox prefHeight="50.0">
                      <children>
                         <Button maxHeight="60.0" minWidth="60.0" mnemonicParsing="false" onAction="#onAñadirWeb" text="Añadir" />
-                        <Button maxWidth="60.0" minWidth="60.0" mnemonicParsing="false" onAction="#onEliminarWeb" text="Eliminar" />
+                        <Button fx:id="eliminarWebB" maxWidth="60.0" minWidth="60.0" mnemonicParsing="false" onAction="#onEliminarWeb" text="Eliminar" />
                      </children>
                      <HBox.margin>
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
