--- a/src/main/resources/fxml/ConocimientosView.fxml
+++ b/src/main/resources/fxml/ConocimientosView.fxml
@@ -19,7 +19,7 @@
          <children>
             <Button maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onAñadirConocimiento" text="Añadir conocimiento" />
             <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#onAñadirIdioma" text="Añadir idioma" />
-            <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#onEliminar" text="Eliminar" />
+            <Button fx:id="eliminarConocimientoButton" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#onEliminar" text="Eliminar" />
          </children>
          <HBox.margin>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
