--- a/src/main/resources/fxml/ExperienciaView.fxml
+++ b/src/main/resources/fxml/ExperienciaView.fxml
@@ -9,7 +9,7 @@
 
 <HBox fx:id="view" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.0" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <TableView fx:id="table" prefHeight="400.0" prefWidth="513.0" HBox.hgrow="ALWAYS">
+      <TableView fx:id="table" editable="true" prefHeight="400.0" prefWidth="513.0" HBox.hgrow="ALWAYS">
         <columns>
           <TableColumn fx:id="desdeCol" prefWidth="120.0" text="Desde" />
           <TableColumn fx:id="hastaCol" prefWidth="120.0" text="Hasta" />
@@ -20,7 +20,7 @@
       <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="5.0" HBox.hgrow="NEVER">
          <children>
             <Button maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onAñadir" text="Añadir" />
-            <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#onEliminar" text="Eliminar" />
+            <Button fx:id="eliminarButton" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#onEliminar" text="Eliminar" />
          </children>
          <HBox.margin>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
