--- a/src/main/resources/fxml/FormacionView.fxml
+++ b/src/main/resources/fxml/FormacionView.fxml
@@ -20,7 +20,7 @@
       <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="5.0" HBox.hgrow="NEVER">
          <children>
             <Button maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onAñadir" text="Añadir" />
-            <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#onEliminar" text="Eliminar" />
+            <Button fx:id="eliminarButton" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#onEliminar" text="Eliminar" />
          </children>
          <HBox.margin>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
