--- a/src/main/resources/fxml/PersonalView.fxml
+++ b/src/main/resources/fxml/PersonalView.fxml
@@ -51,7 +51,7 @@
       <TextArea fx:id="direccionTA" prefHeight="60.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="4" />
       <TextField fx:id="codigoPostalTF" maxWidth="100.0" prefHeight="25.0" prefWidth="110.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
       <TextField fx:id="localidadTF" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="6" />
-      <ComboBox fx:id="paisCB" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+      <ComboBox fx:id="paisCB" prefWidth="150.0" promptText="Seleccione un país" GridPane.columnIndex="1" GridPane.rowIndex="7" />
       <ListView fx:id="nacionalidadesLV" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="8">
          <GridPane.margin>
             <Insets bottom="10.0" />
